--- a/conversions.html
+++ b/conversions.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="En"><head>
-    <title>Mise Willson</title>
+    <title>Base Converter and Calculator</title>
  
 
 
     <link href="css/phone.css" rel="stylesheet" type="text/css" />
     <link href="css/desktop.css" rel="stylesheet" type="text/css" />
     <link href="css/tablet.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="img/logo2.jpg">
     <link href="css/calculator.css" rel="stylesheet" type="text/css">
     <meta name="description" content="This is a base converter calculator" />
     <meta name="keywords" content="Base calculator">
@@ -15,7 +16,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="js/jquery-3.5.1.min.js" ></script>
-    <script src="js/convert.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+   
 </head>
 
 
@@ -80,15 +83,17 @@
 <footer>
     <hr>
     <div>
-        Developed by Belmiro Mohlala founder of <a href="https://weball.co.za">Weball Technologies</a>
+        Developed by Belmiro (founder of <a href="https://weball.co.za">Weball Technologies</a>)
      </div> 
      <p> Follow me:
-     <div >
-         <a href="#">Link In<i class="fa fa-icon"></i></a>
-         <a href="#">YouTube<i class="fa fa-icon"></i></a>
-         <a href="#">Github<i class="fa fa-icon"></i></a>
+     <div class="follow" >
+         <a href="https://www.linkedin.com/in/belmiro-mohlala-011539207/"><i class="fa fa-linkedin" style="background-color: rgb(11, 87, 185);"></i></a>
+         <a href="https://www.youtube.com/channel/UCWJVtws9qSRdLCdqaZXIdpg"><i class="fa fa-youtube-play" style="background-color: red;"></i></a>
+         <a href="https://github.com/Belmiro-webdeveloper"><i class="fa fa-github" style="background-color: black;"></i></a>
          </div>  
 
 </footer>
+
+<script src="js/convert.js"></script>
 
 </body></html>
